add Store Test Dip worker

--- a/config/abby_normal.yml.example
+++ b/config/abby_normal.yml.example
@@ -9,12 +9,16 @@ source:
   username: 'example'
   host: 'example.com'
 staging:
-  host: 'example.com'
-  aip_dir: '/path/to/aips'
+  username: 'example'
+  dips_host: 'example.com'
+  solr_host: 'example.com'
   dip_dir: '/path/to/dips'
   solr_dir: '/path/to/solr'
 production:
-  host: 'example.com'
+  username: 'example'
+  aips_host: 'example.com'
+  dips_host: 'example.com'
+  solr_host: 'example.com'
   aip_dir: '/path/to/aips'
   dip_dir: '/path/to/dips'
   solr_dir: '/path/to/solr'
