add remaining workers

--- a/config/abby_normal.yml.example
+++ b/config/abby_normal.yml.example
@@ -11,17 +11,18 @@ source:
 staging:
   username: 'example'
   dips_host: 'example.com'
-  oh_host: 'example.com'
-  solr_host: 'example.com'
   dip_dir: '/path/to/dips'
+  oh_host: 'example.com'
   oh_dir: '/path/to/oh'
   blacklight_dir: '/path/to/blacklight'
   solr_dir: '/path/to/solr'
+  solr_host: 'example.com'
 production:
   username: 'example'
-  aips_host: 'example.com'
   dips_host: 'example.com'
-  solr_host: 'example.com'
-  aip_dir: '/path/to/aips'
   dip_dir: '/path/to/dips'
+  oh_host: 'example.com'
+  oh_dir: '/path/to/oh'
+  blacklight_dir: '/path/to/blacklight'
   solr_dir: '/path/to/solr'
+  solr_host: 'example.com'
