check checksums of transferred Solr JSON metadata

--- a/config/abby_normal.yml.example
+++ b/config/abby_normal.yml.example
@@ -26,3 +26,4 @@ production:
   blacklight_dir: '/path/to/blacklight'
   solr_dir: '/path/to/solr'
   solr_host: 'example.com'
+  solr_checksum: '/path/to/solr_checksum'
